--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
     "prettier": "3.7.4",
+    "sass": "^1.97.2",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
