--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
     "axios": "^1.13.2",
+    "d3": "^7.9.0",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.562.0",
     "pinia": "^3.0.4",
+    "remixicon": "^4.9.1",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
+    "@types/d3": "^7.4.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.10.4",
     "@vitejs/plugin-vue": "^6.0.3",
