--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@phosphor-icons/vue": "^2.2.1",
     "axios": "^1.13.2",
     "d3": "^7.9.0",
+    "dompurify": "^3.3.1",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.562.0",
+    "marked": "^17.0.3",
     "pinia": "^3.0.4",
     "remixicon": "^4.9.1",
     "vue": "^3.5.26",
@@ -30,6 +32,7 @@
     "@tsconfig/node24": "^24.0.3",
     "@types/d3": "^7.4.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/marked": "^5.0.2",
     "@types/node": "^24.10.4",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-prettier": "^10.2.0",
